FILE(GLOB SOURCES *.c)
FILE(GLOB HEADERS *.h)

SET_SOURCE_FILES_PROPERTIES(wpref.c PROPERTIES COMPILE_FLAGS -DEXPORT=)

INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTKHTML_INCLUDE_DIRS})

ADD_LIBRARY(xtrackcad-wlib SHARED ${HEADERS} ${SOURCES})

INSTALL(TARGETS xtrackcad-wlib
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	)

